# backup

./: CMakeLists.txt
.github/: README.md
.github/workflows/: debug.yml  release.yml
cmake/: clean_logs.cmake
include/: Logs.h
include/Commands/: Command.h  CommandRegistry.h  Console.h  DatCommands.h  ExitCommand.h  HelpCommand.h
include/Logs/: ColorStrippingSink.h  Logs.h
include/WebSocket/: WebSocketHandler.h
include/dat/: dat.h
src/: Logs.cpp  main.cpp
src/Commands/: Command.cpp  CommandRegistry.cpp  Console.cpp  DatCommands.cpp  ExitCommand.cpp  HelpCommand.cpp
src/Logs/: Logs.cpp
src/WebSocket/: WebSocketHandler.cpp
src/dat/: dat.cpp
